@@ -1,8 +1,8 @@
 Package: nftbart
 Type: Package
 Title: Nonparametric Failure Time Bayesian Additive Regression Trees
-Version: 1.1
-Date: 2021-12-17
+Version: 1.3
+Date: 2022-03-26
 Authors@R: c(person('Rodney', 'Sparapani', 
 	   role=c('aut', 'cre'), email='rsparapa@mcw.edu'),
 	   person('Robert', 'McCulloch', role='aut'),
